@@ -7,7 +7,7 @@ copyright_holder = Florian Ragwitz
 
 [Prereqs]
 Module::Runtime = 0.012
-Sub::Exporter = 0.981
+Sub::Exporter::Progressive = 0.001006
 Module::Implementation = 0.05
 
 [Prereqs / TestRequires ]
